--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">CryptoTracker</string>
+    <string name="error_request_timeout">The request timed out.</string>
+    <string name="error_too_many_requests">Too many requests.</string>
+    <string name="error_no_internet">No internet available.</string>
+    <string name="error_serialization">Serialization error.</string>
+    <string name="error_server_error">Server error.</string>
+    <string name="error_unknown">Unknown error.</string>
 </resources>
